// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifCard component should not render visible btn 1`] = `
<div
  className="sc-bwzfXH dOTfHK"
>
  <img
    alt="gif"
    src="https://media3.giphy.com/media/p3n7NWvfz3u0c1meay/200w_d.gif"
  />
  <div
    className="sc-bdVaJa kWteoq"
  >
    <img
      alt="detail"
      className="sc-htpNat jSMwyr"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <img
      alt="favorite"
      className="sc-htpNat jSMwyr"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
</div>
`;

exports[`GifCard component should render 1`] = `
<div
  className="sc-bwzfXH dOTfHK"
>
  <img
    alt="gif"
    src="https://media3.giphy.com/media/p3n7NWvfz3u0c1meay/200w_d.gif"
  />
  <div
    className="sc-bdVaJa kWteoq"
  >
    <img
      alt="favorite"
      className="sc-htpNat jSMwyr"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
</div>
`;

exports[`GifCard component should render filled heart 1`] = `
<div
  className="sc-bwzfXH dOTfHK"
>
  <img
    alt="gif"
    src="https://media3.giphy.com/media/p3n7NWvfz3u0c1meay/200w_d.gif"
  />
  <div
    className="sc-bdVaJa kWteoq"
  >
    <img
      alt="detail"
      className="sc-htpNat jSMwyr"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <img
      alt="favorite"
      className="sc-htpNat jSMwyr"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
</div>
`;

exports[`GifCard component should render the big image 1`] = `
<div
  className="sc-bwzfXH dOTfHK"
>
  <img
    alt="gif"
    src="https://media3.giphy.com/media/p3n7NWvfz3u0c1meay/giphy.gif"
  />
  <div
    className="sc-bdVaJa kWteoq"
  >
    <img
      alt="detail"
      className="sc-htpNat jSMwyr"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
    <img
      alt="favorite"
      className="sc-htpNat jSMwyr"
      onClick={[Function]}
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
</div>
`;
